[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://game-objects/UI/Menu/SettingsMenu.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
polygon = PoolVector2Array( 0, 0, 0, 600, 1030, 600, 1030, 0 )

[node name="PauseContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -43.0
margin_right = 32.0
margin_bottom = 43.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
margin_right = 64.0
margin_bottom = 86.0

[node name="MarginContainer" type="MarginContainer" parent="PauseContainer/VBoxContainer"]
editor/display_folded = true
modulate = Color( 1, 0, 0, 1 )
margin_right = 64.0
margin_bottom = 14.0

[node name="CenterContainer" type="CenterContainer" parent="PauseContainer/VBoxContainer/MarginContainer"]
margin_right = 64.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="PauseContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 13.0
margin_right = 51.0
margin_bottom = 14.0
text = "Pause"

[node name="CenterContainer" type="CenterContainer" parent="PauseContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 18.0
margin_right = 64.0
margin_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer/VBoxContainer/CenterContainer"]
editor/display_folded = true
margin_right = 64.0
margin_bottom = 68.0

[node name="Resume" type="Button" parent="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "Resume"

[node name="Settings" type="Button" parent="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Settings"

[node name="Exit" type="Button" parent="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 68.0
text = "Exit"

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
